tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__attribute_complex.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\n#[complex_attribute_macro]\nfn foo() {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[complex_attribute_macro]<caret>
fn <caret>foo() {}
fn foo() {<caret>}
"""
generated_code = """
fn generated_function() {}
"""
