tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__attribute_improper.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros = { path = \"/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\n#[improper_attribute_macro]\nfn foo() {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[improper_attribute_macro]<caret>
fn f<caret>oo() {}
fn foo() {<caret>}
"""
generated_code = """
fn foo() {}
fn added_fun() {
    a = b;
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: fn foo() {}
    diagnostic:
      range:
        start:
          line: 1
          character: 0
        end:
          line: 1
          character: 11
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the attribute macro: `improper_attribute_macro`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro.cairo
          range:
            start:
              line: 0
              character: 29
            end:
              line: 0
              character: 30
        message: Diagnostic mapped from here.
  - related_code: fn foo() {}
    diagnostic:
      range:
        start:
          line: 1
          character: 0
        end:
          line: 1
          character: 11
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the attribute macro: `improper_attribute_macro`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro.cairo
          range:
            start:
              line: 0
              character: 33
            end:
              line: 0
              character: 34
        message: Diagnostic mapped from here.
  - related_code: fn foo() {}
    diagnostic:
      range:
        start:
          line: 1
          character: 0
        end:
          line: 1
          character: 11
      severity: 1
      code: E2084
      message: |-
        Invalid left-hand side of assignment.
        note: this error originates in the attribute macro: `improper_attribute_macro`
      relatedInformation:
      - location:
          uri: vfs://proc_improper_attribute_macro.cairo
          range:
            start:
              line: 0
              character: 29
            end:
              line: 0
              character: 30
        message: Diagnostic mapped from here.
