tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__derive_improper.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros = { path = \"/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\n#[derive(ImproperDeriveMacro)]\nstruct EmptyStruct {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ImproperDeriveMacro)]
#[derive(Improper<caret>DeriveMacro)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ImproperDeriveMacro)]
struct EmptyStruct {}
fn generated_function() {
    some < *> haskell < $> syntax
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E1002
      message: |-
        Missing tokens. Expected an expression.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 11
            end:
              line: 1
              character: 11
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E1028
      message: |-
        Consecutive comparison operators are not allowed: '<' followed by '>'
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 11
            end:
              line: 1
              character: 11
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E1028
      message: |-
        Consecutive comparison operators are not allowed: '>' followed by '<'
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 21
            end:
              line: 1
              character: 21
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E1003
      message: |-
        Missing tokens. Expected a path segment.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 23
            end:
              line: 1
              character: 23
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E1028
      message: |-
        Consecutive comparison operators are not allowed: '<' followed by '>'
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 23
            end:
              line: 1
              character: 23
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 4
            end:
              line: 1
              character: 8
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E2183
      message: |-
        Are you missing a `::`?.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 9
            end:
              line: 1
              character: 10
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 13
            end:
              line: 1
              character: 20
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E2183
      message: |-
        Are you missing a `::`?.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 21
            end:
              line: 1
              character: 22
        message: Diagnostic mapped from here.
  - related_code: ImproperDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 28
      severity: 1
      code: E0006
      message: |-
        Identifier not found.
        note: this error originates in the derive macro: `ImproperDeriveMacro`
      relatedInformation:
      - location:
          uri: vfs://proc_macro_derive.cairo
          range:
            start:
              line: 1
              character: 25
            end:
              line: 1
              character: 31
        message: Diagnostic mapped from here.
