tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__inline_simple.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    let _x = simple_inline_macro!(10 + 10);\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    let _x = simple<caret>_inline_macro!(10 + 10);
    let _x = simple_inline_macro!(10 +<caret> 10);
"""
generated_code = """
9
"""
